# manager

./: .env.example  .gitignore  README.md  app.py  config.json  dev-config.json  main.py  prod-config.json  pyproject.toml
src/: main.py
src/internal/: auth.py  manager.py  type.py  worker.py
src/routers/: elasticity.py  init.py  internal.py  job.py  node.py  pod.py  server.py
src/utils/: config.py  fetch.py  ws.py
