[tool.poetry]
name = "manager"
version = "0.1.0"
description = ""
authors = ["Joey Yu <joey@itsjoeoui.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
requests = "^2.28.2"
Flask-Cors = "^3.0.10"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
