[tool.poetry]
name = "manager"
version = "0.1.0"
description = ""
authors = ["Joey Yu <joey@itsjoeoui.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.91.0"}
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
